name:                floss
version:             0.1.0.0
synopsis:            Free Libre Open Source Software Browser
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Michael Schönitzer, Fabian Dreer
maintainer:          michael@schoenitzer.de, dreer@cip.ifi.lmu.de
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Library
  other-extensions:    EmptyDataDecls, FlexibleContexts, GADTs, GeneralizedNewtypeDeriving, MultiParamTypeClasses, OverloadedStrings, QuasiQuotes, TemplateHaskell, TypeFamilies, ViewPatterns, ScopedTypeVariables, DeriveGeneric, DataKinds, TypeOperators
  build-depends:       base >=4.9 && <4.10, shakespeare >=2.0 && <2.1, yesod >=1.4 && <1.5, text >=1.2 && <1.3, esqueleto >=2.4 && <2.5, persistent >=2.6 && <2.7, persistent-sqlite >=2.6 && <2.7, monad-logger >=0.3 && <0.4, mtl >=2.2 && <2.3, configurator >=0.3 && <0.4, http-client >=0.5 && <0.6, aeson >=1.0 && <1.1, time >=1.6 && <1.7, template-haskell >=2.11 && <2.12, transformers >=0.5 && <0.6, resourcet >=1.1 && <1.2, http-client-tls >=0.3 && <0.4, persistent-template >=2.5 && <2.6, network-uri >= 2.6.1.0
  Exposed-modules:   Floss.DB, Floss.Types
  ghc-options:       -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable CreateDB
  main-is:             CreateDB.hs
  -- other-modules:       
  other-extensions:    EmptyDataDecls, FlexibleContexts, GADTs, GeneralizedNewtypeDeriving, MultiParamTypeClasses, OverloadedStrings, QuasiQuotes, TemplateHaskell, TypeFamilies, ViewPatterns, ScopedTypeVariables, DeriveGeneric, DataKinds, TypeOperators
  build-depends:       base >=4.9 && <4.10, shakespeare >=2.0 && <2.1, yesod >=1.4 && <1.5, text >=1.2 && <1.3, esqueleto >=2.4 && <2.5, persistent >=2.6 && <2.7, persistent-sqlite >=2.6 && <2.7, monad-logger >=0.3 && <0.4, mtl >=2.2 && <2.3, configurator >=0.3 && <0.4, http-client >=0.5 && <0.6, aeson >=1.0 && <1.1, time >=1.6 && <1.7, template-haskell >=2.11 && <2.12, transformers >=0.5 && <0.6, resourcet >=1.1 && <1.2, http-client-tls >=0.3 && <0.4, persistent-template >=2.5 && <2.6, network-uri >= 2.6.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Browser
  main-is:             Browser.hs
  -- other-modules:       
  other-extensions:    EmptyDataDecls, FlexibleContexts, GADTs, GeneralizedNewtypeDeriving, MultiParamTypeClasses, OverloadedStrings, QuasiQuotes, TemplateHaskell, TypeFamilies, ViewPatterns, ScopedTypeVariables, DeriveGeneric, DataKinds, TypeOperators
  build-depends:       base >=4.9 && <4.10, shakespeare >=2.0 && <2.1, yesod >=1.4 && <1.5, text >=1.2 && <1.3, esqueleto >=2.4 && <2.5, persistent >=2.6 && <2.7, persistent-sqlite >=2.6 && <2.7, monad-logger >=0.3 && <0.4, mtl >=2.2 && <2.3, configurator >=0.3 && <0.4, http-client >=0.5 && <0.6, aeson >=1.0 && <1.1, time >=1.6 && <1.7, template-haskell >=2.11 && <2.12, transformers >=0.5 && <0.6, resourcet >=1.1 && <1.2, http-client-tls >=0.3 && <0.4, persistent-template >=2.5 && <2.6
  hs-source-dirs:      src
  data-files:          templates/*.hamlet, templates/*.julius, templates/*.lucius
  default-language:    Haskell2010
